# mahogany

./: .clang-format  .dir-locals.el  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.org  all.lisp  build-mahogany.lisp  globals.lisp  guix.scm  init-build-env.lisp  input.lisp  log.lisp  mahogany-test.asd  mahogany.asd  mahogany.ros  main.lisp  make-mahogany.lisp.in  meson.build  meson_options.txt  package.lisp  run-main.lisp  run-tests.lisp  run-tests.sh  state.lisp  util.lisp
.github/workflows/: ci-container.yml  test.yml
.guix/modules/: mahogany-package.scm  test-system.scm
backend/: backend.lisp  client-manager.lisp  desktop.lisp  output-manager.lisp  output.lisp  package.lisp  server-protocol.lisp  server.lisp  test.lisp  util.lisp  view.lisp
backend/input/: classes.lisp  input-device.lisp  input-devices.lisp  input-manager.lisp  keyboard.lisp  pointing-device.lisp  seat.lisp
base/: mahogany.lisp  package.lisp
bindings/: hrt-bindings.lisp  hrt-libs.lisp  package.lisp
cffi/: hrt-bindings.yml  wl-bindings.yml  wlr-bindings.yml
doc/: MANUAL.org  configuration-files.org  configuration.org  default-apps.org  focus.org  keybindings.org  keyboard-layout.org  kmap-modes.org  manual-intro.org  output-configuration.org  public-vs-private-symbols.org
doc/devel/: adding-new-protocols-to-heart.org  features.md  frame-tree.org  frames.org  initial-plan.org
doc/devel/proposal/: frames.org  initial-plan.org
doc/manual/: configuration-files.org  configuration-properties.org  default-apps.org  focus.org  kmap-keybindings.org  kmap-modes.org  output-configuration.org
heart/: .editorconfig  .gitignore  README.md  meson.build  meson_options.txt
heart/example/: main.c  meson.build
heart/include/: hrt_input.h  hrt_output.h  hrt_server.h  layer_shell_impl.h  mahogany_output.h  mahogany_server.h  meson.build  message_impl.h  output_impl.h  scene_descriptor.h  scene_impl.h  seat_impl.h  view_impl.h  xdg_impl.h
heart/include/hrt/: config.h.in  hrt_border_box.h  hrt_event_loop.h  hrt_input.h  hrt_layer_shell.h  hrt_message.h  hrt_output.h  hrt_scene.h  hrt_server.h  hrt_subprocess.h  hrt_theme.h  hrt_view.h  meson.build
heart/include/hrt/debug/: hrt_debug.h
heart/include/render/: cairo_buffer.h  scale_util.h
heart/protocols/: hrt-keybinding-status.xml  meson.build
heart/src/: border_box.c  cursor.c  event_loop.c  input.c  keyboard.c  layer_shell.c  main.c  meson.build  message.c  output.c  output_methods.c  scene.c  scene_descriptor.c  seat.c  server.c  subprocess.c  view.c  xdg_shell.c
heart/src/debug/: debug.c
heart/src/render/: cairo_buffer.c  scale_util.c
interfaces/: backend-interface.lisp  view-interface.lisp  wm-interface.lisp
keyboard/: key.lisp  keytrans.lisp  kmap.lisp
lisp/: command.lisp  events.lisp  globals.lisp  group.lisp  input.lisp  key-bindings.lisp  kmap-modes.lisp  log.lisp  main.lisp  message.lisp  objects.lisp  output-config.lisp  output.lisp  package.lisp  state.lisp  system.lisp  transaction.lisp  util.lisp  view.lisp
lisp/bindings/: hrt-bindings.lisp  hrt-bindings.yml  hrt-libs.lisp  layer-shell.lisp  package.lisp  scene-group.lisp  subprocess.lisp  view.lisp  wlr-bindings.lisp  wlr-bindings.yml  wrappers.lisp
lisp/config/: config-system.lisp
lisp/heart/: border-box.lisp  callback.lisp  cffi-util.lisp  hrt-bindings.lisp  hrt-debug.lisp  hrt-libs.lisp  layer-shell.lisp  message.lisp  output.lisp  package.lisp  scene-group.lisp  seat.lisp  server.lisp  subprocess.lisp  transaction.lisp  view.lisp  wl-bindings.lisp  wlr-bindings.lisp  wrappers.lisp
lisp/input-methods/: foot-input-method.lisp  rofi-input-method.lisp
lisp/interfaces/: view-interface.lisp
lisp/keyboard/: gimme-key.lisp  key-hash.lisp  key.lisp  kmap.lisp  package.lisp
lisp/ring-list/: ring-list.lisp
lisp/theme/: theme.lisp
lisp/tree/: frame.lisp  group-interface.lisp  layer-shell.lisp  output-container.lisp  output-node.lisp  package.lisp  tree-interface.lisp  tree-parent.lisp  view.lisp
scripts/: format-lisp.el  install-dependencies.lisp
src/: log.lisp  util.lisp
src/backend/: desktop.lisp  output.lisp  server.lisp  simple.lisp  util.lisp
test/: Dockerfile  config-system-tests.lisp  keyboard-tests.lisp  kmap-modes.lisp  log-tests.lisp  mahogany-test.lisp  output-config-tests.lisp  ring-list.lisp  tree-tests-2.lisp  tree-tests.lisp  tree.lisp  util.lisp
test/heart/: output-tests.lisp
test/theme/: theme-tests.lisp
tree/: frame.lisp  group-interface.lisp  group.lisp  tree-interface.lisp  view.lisp
wm/: wm.lisp
