option('xwayland', type: 'feature', value: 'auto', description: 'Enable support for X11 applications')
option('example', type: 'boolean', value: true, description: 'Build example C application')
option('debug_utils', type: 'boolean', value: true, description: 'Include utilities to add new outputs when running under wayland or X11')
