hrt_source_files += files(
  'cursor.c',
  'input.c',
  'keyboard.c',
  'message.c',
  'output.c',
  'output_methods.c',
  'seat.c',
  'scene.c',
  'server.c',
  'subprocess.c',
  'view.c',
  'xdg_shell.c',
  )

if get_option('debug_utils')
   hrt_source_files += files(
      'debug/debug.c'
   )
endif
