hrt_source_files += files(
  'border_box.c',
  'cursor.c',
  'event_loop.c',
  'input.c',
  'keyboard.c',
  'message.c',
  'output.c',
  'output_methods.c',
  'render/cairo_buffer.c',
  'render/scale_util.c',
  'seat.c',
  'scene.c',
  'scene_descriptor.c',
  'server.c',
  'view.c',
  'xdg_shell.c',
  )

if get_option('debug_utils')
   hrt_source_files += files(
      'debug/debug.c'
   )
endif
