hrt_source_files += files(
  'cursor.c',
  'event_loop.c',
  'input.c',
  'keyboard.c',
  'message.c',
  'output.c',
  'output_methods.c',
  'seat.c',
  'scene.c',
  'scene_descriptor.c',
  'server.c',
  'view.c',
  'xdg_shell.c',
  'layer_shell.c',
  'scene_descriptor.c',
)

if get_option('debug_utils')
   hrt_source_files += files(
      'debug/debug.c'
   )
endif
